[package]
name = "oid4vc"
version = "0.1.0"
edition = "2021"
description = "Rust implementation of the OpenID4VC standards"
homepage = "https://www.impierce.com/"
keywords = ["openid4vc", "siopv2", "openid4vp", "openid4vci", "OpenID"]
license = "Apache-2.0"
repository = "https://github.com/impierce/openid4vc"

[workspace]
members = [
    "oid4vc-core",
    "oid4vci",
    "oid4vp",
    "siopv2",
    "dif-presentation-exchange",
    "oid4vc-manager"
]

[workspace.package]
homepage = "https://www.impierce.com/"
license = "Apache-2.0"
repository = "https://github.com/impierce/openid4vc"

[workspace.dependencies]
bls12_381_plus = { version = "0.8.17" }
chrono = "0.4"
getset = "0.1"
# identity_core = { git = "https://github.com/iotaledger/identity.rs", branch = "feat/sd-jwt-vc" }
identity_core = { path = "../identity.rs/identity_core" }
# identity_credential = { git = "https://github.com/iotaledger/identity.rs", branch = "feat/sd-jwt-vc", default-features = false, features = ["validator", "credential", "presentation"] }
identity_credential = { path = "../identity.rs/identity_credential", default-features = false, features = ["validator", "credential", "presentation", "sd-jwt-vc"] }
is_empty = "0.2"
jsonwebtoken = "9.3"
monostate = "0.1"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
reqwest-middleware = "0.2"
reqwest-retry = "0.3"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_urlencoded = "0.7"
serde_with = "3.0"
tokio = { version = "1.26.0", features = ["rt", "macros", "rt-multi-thread"] }
url = { version = "2", features = ["serde"] }

# TODO: Fix these dependencies once publishing to crates.io is automated.
[dependencies]
oid4vc-core = { path = "oid4vc-core" }
oid4vci = { path = "oid4vci" }
oid4vp = { path = "oid4vp" }
siopv2 = { path = "siopv2" }
oid4vc-manager = { path = "oid4vc-manager" }
dif-presentation-exchange = { path = "dif-presentation-exchange" }
