[package]
name = "dif-presentation-exchange"
version = "0.1.0"
edition = "2021"
description = "Rust implementation for the DIF Presentation Exchange specification"
homepage.workspace = true
keywords = ["oid4vc", "dif", "presentation", "exchange", "DIF", "OpenID"]
license.workspace = true
repository.workspace = true
