[package]
name = "oid4vc-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
# Fix these dependencies once the crates arre automatically published to crates.io.
oid4vc-core = { path = "../oid4vc-core" }
siopv2 = { path = "../siopv2" }
oid4vp = { path = "../oid4vp" }
oid4vci = { path = "../oid4vci" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
getset.workspace = true
anyhow = "1.0"
async-trait = "0.1"
did_url = "0.1"
chrono = "0.4"
serde_urlencoded = "0.7"
did-key = "0.2"
identity_core = { version = "=0.7.0-alpha.7" }
identity_credential.workspace = true
futures = "0.3"
axum = "0.6"
axum-auth = "0.4"
reqwest.workspace = true
jsonwebtoken = "8.3"
paste = "1.0"
tower-http = { version = "0.4", features = ["cors"]}

[dev-dependencies]
ed25519-dalek = "1.0.1"
rand = "0.7"
lazy_static = "1.4"
derivative = "2.2"
wiremock = "0.5"
uuid = { version = "1.4", features = ["v4", "fast-rng"] }
rstest = "0.18"

