[package]
name = "oid4vci"
version = "0.1.0"
edition = "2021"
description = "Rust implementation of the OpenID Connect OpenID for Verifiable Credential Issuance standard"
homepage.workspace = true
keywords = ["oid4vc", "openid4vc", "oid4vci", "OpenID"]
license.workspace = true
repository.workspace = true

[dependencies]
oid4vc-core = { path = "../oid4vc-core" }
getset.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow = "1.0"