[package]
name = "oid4vci"
version = "0.1.0"
edition = "2021"
description = "Rust implementation of the OpenID Connect OpenID for Verifiable Credential Issuance standard"
homepage.workspace = true
keywords = ["oid4vc", "openid4vc", "oid4vci", "OpenID"]
license.workspace = true
repository.workspace = true

[dependencies]
oid4vc-core = { path = "../oid4vc-core" }
dif-presentation-exchange = { path = "../dif-presentation-exchange" }
getset.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
tokio.workspace = true
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
serde_urlencoded = "0.7"
derivative = "2.2.0"
bincode = "1.3"
paste = "1.0"
lazy_static = "1.4"
jsonwebtoken = "8.3"

[dev-dependencies]
wiremock = "0.5"
