[package]
name = "oid4vci"
version = "0.1.0"
edition = "2021"
description = "Rust implementation of the OpenID Connect OpenID for Verifiable Credential Issuance standard"
homepage.workspace = true
keywords = ["oid4vc", "openid4vc", "oid4vci", "OpenID"]
license.workspace = true
repository.workspace = true

[dependencies]
oid4vc-core = { path = "../oid4vc-core" }
dif-presentation-exchange = { path = "../dif-presentation-exchange" }

anyhow = "1.0"
derivative = "2.2.0"
getset.workspace = true
lazy_static = "1.4"
jsonwebtoken.workspace = true
paste = "1.0"
reqwest.workspace = true
reqwest-middleware.workspace = true
reqwest-retry.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
serde_with.workspace = true
tokio.workspace = true

[dev-dependencies]
wiremock = "0.5"
