[package]
name = "oid4vp"
version = "0.1.0"
edition = "2021"
description = "Rust implementation of the OpenID Connect OpenID for Verifiable Presentations standard"
homepage.workspace = true
keywords = ["oid4vc", "openid4vc", "oid4vp", "OpenID"]
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
# Fix these dependencies once the crates arre automatically published to crates.io.
dif-presentation-exchange = { path = "../dif-presentation-exchange" }
identity_credential = { git = "https://git@github.com/iotaledger/identity.rs", rev = "4f27434" } 

