[package]
name = "oid4vp"
version = "0.1.0"
edition = "2021"
description = "Rust implementation of the OpenID Connect OpenID for Verifiable Presentations standard"
homepage.workspace = true
keywords = ["oid4vc", "openid4vc", "oid4vp", "OpenID"]
license.workspace = true
repository.workspace = true

[dependencies]
# Fix these dependencies once the crates arre automatically published to crates.io.
oid4vc-core = { path = "../oid4vc-core" }
dif-presentation-exchange = { path = "../dif-presentation-exchange" }
oid4vci = { path = "../oid4vci" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
getset.workspace = true
identity_credential.workspace = true
identity_core = "=0.7.0-alpha.7"
url.workspace = true
is_empty.workspace = true
chrono.workspace = true
jsonwebtoken.workspace = true
anyhow = "1.0"
futures = "0.3"
