[package]
name = "siopv2"
version = "0.1.0"
edition = "2021"
description = "Rust implementation of the OpenID Connect Self-Issued OpenID Provider v2 standard"
homepage.workspace = true
keywords = ["oid4vc", "openid4vc", "siopv2", "OpenID"]
license.workspace = true
repository.workspace = true

[dependencies]
oid4vc-core = { path = "../oid4vc-core" }
oid4vp = { path = "../oid4vp" }
oid4vci = { path = "../oid4vci" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
getset.workspace = true
url.workspace = true
is_empty.workspace = true
chrono.workspace = true
jsonwebtoken.workspace = true
anyhow = "1.0.70"
reqwest.workspace = true
base64-url = "2.0.0"
async-trait = "0.1.68"
did_url = "0.1.0"
serde_urlencoded.workspace = true
identity_credential.workspace = true
futures = "0.3"

[dev-dependencies]
ed25519-dalek = "2.0"
rand = "0.7"
lazy_static = "1.4.0"
derivative = "2.2.0"
wiremock = "0.5.18"
