[package]
name = "siopv2"
version = "0.1.0"
edition = "2021"
description = "Rust implementation of the OpenID Connect Self-Issued OpenID Provider v2 standard"
homepage.workspace = true
keywords = ["oid4vc", "openid4vc", "siopv2", "OpenID"]
license.workspace = true
repository.workspace = true

[dependencies]
oid4vc-core = { path = "../oid4vc-core" }

anyhow = "1.0.70"
async-trait = "0.1.68"
base64-url = "2.0.0"
chrono = "0.4.24"
derive_more = "0.99.16"
did_url = "0.1.0"
futures = "0.3"
getset.workspace = true
identity_credential.workspace = true
is_empty = "0.2.0"
jsonwebtoken = "8.2.0"
monostate.workspace = true
reqwest.workspace = true
reqwest-middleware.workspace = true
reqwest-retry.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_urlencoded = "0.7.1"
serde_with.workspace = true
tokio.workspace = true
url = { version = "2.3.1", features = ["serde"] }


[dev-dependencies]
oid4vc-core = { path = "../oid4vc-core", features = ["test-utils"] }

derivative = "2.2.0"
ed25519-dalek = { version = "2.0.0", features = ["rand_core"] }
lazy_static = "1.4.0"
rand = "0.8"
wiremock = "0.5.18"
